[package]
name = "tower-sanitize-path"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
tower-layer = "0.3.2"
tower-service = "0.3.2"
url-escape = "0.1.1"

[dev-dependencies]
hyper = "0.14.26"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["util"] }
