[package]
name = "tower-sanitize-path"
description = "Tower middleware to sanitize request paths"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/shuttle-hq/tower-sanitize-path"
documentation = "https://docs.rs/tower-sanitize-path"
edition = "2021"

[dependencies]
http = "0.2.9"
tower-layer = "0.3.2"
tower-service = "0.3.2"
url-escape = "0.1.1"

[dev-dependencies]
hyper = "0.14.26"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["util"] }
